--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "ui-components",
   "version": "1.0.0",
   "description": "Using JS, HTML and CSS to practice creating modular UI components to reuse for later projects.",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,8 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
-    "prettier": "2.5.0"
+    "prettier": "2.5.0",
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1"
   }
 }
